<resources>
    <string name="app_name">Practica_Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellido/s</string>
    <string name="Año">Año de nacimiento</string>
    <string name="Título">¿Qué personaje de Star Wars eres?</string>
    <string name="Enviar">Enviar</string>
    <string name="ErrorAño3">El año de nacimiento debe ser un número entre 1900 y 2022</string>
    <string name="ErrorAño2">El año debería estar sólo compuesto por números</string>
    <string name="ErrorAño1">El año no puede estar vacío</string>
    <string name="ErrorNombre1">El nombre no puede estar vacío</string>
    <string name="ErrorNombre2">El nombre no puede contener números</string>
    <string name="ErrorApellido1">El apellido no puede estar vacío</string>
    <string name="ErrorApellido2">El apellido no puede contener números</string>
    <string name="CharacterName">Nombre:</string>
    <string name="CharacterGender">Género:</string>
    <string name="CharacterBirth">Año nacimiento:</string>
    <string name="TituloResult">La Fuerza ha decidido que eres...</string>
    <string name="Salir">¿Quieres salir?</string>
    <string name="AlertaSalir">Estás a punto de salir</string>
    <string name="Ok">Ok</string>
    <string name="Cancelar">Cancelar</string>
    <string name="provisionalTxt">Hmm...Parece que la fuerza aún esta decidiendo</string>
    <string name="Resultado">Resultado</string>
    <string name="Formulario">Formulario</string>
    <string name="ListaEj">Lista de ejemplos</string>
</resources>